<resources>
    <string name="app_name">Diario de un Superviviente</string>
    <string name="action_settings">Settings</string>
    <string name="saludo">Buenasssss</string>
    <string name="despedida">Adiosssssssss</string>
    <string name="textoLogeo">Introduce tu nombre para loquearte en la aplicación</string>
    <string name="title_activity_bienvenida">BienvenidaActivity</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="otros">OTROS</string>
    <string name="noticias">NOTICIAS</string>
    <string name="foro">FORO</string>
    <string name="mispersonas">MIS PERSONAS</string>
    <string name="miscitas">MIS CITAS</string>
    <string name="miactividad">MI ACTIVIDAD</string>
    <string name="enmarcha">EN MARCHA</string>
    <string name="calendario">CALENDARIO</string>
    <string name="descripcionEnMarcha">EVENTOS HOY EN MARCHA</string>
    <string name="descripcionCalendario">VISTA GENERAL CALENDARIO MES</string>
    <string name="descripcionCitas">ESTAS SON MIS CITAS PROXIMAS</string>
    <string name="descripcionPersonajes">ESTA ES MI LISTA DE GENTE</string>
    <string name="descripcionOtros">TELEFONES DE INTERES, NOTICIAS, FOROS, AUTOAYUDA</string>
    <string name="title_activity_citas">Citas</string>
    <string name="title_activity_otros">Otros</string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="volver">INICIO</string>
    <string-array name="nav_options">
        <item>Bienvenida</item>
        <item>Calendario</item>
        <item>Citas</item>
        <item>Rutinas</item>
        <item>Personajes</item>
        <item>Medicación</item>
        <item>Síntomas</item>
        <item>Pruebas</item>
        <item>Recursos</item>
        <item>Ajustes</item>
    </string-array>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="string_content_description">Imagen de Contacto</string>
    <string name="exception_message_generic">Ocurrió un error en la aplicación</string>
    <string name="exception_message_no_connection">No se ha encontrado conexión a internet</string>
    <string name="exception_message_contact_not_found">No se ha podido recuperar los contactos o contacto no encontrado</string>
    <string name="exception_message_meeting_not_found">No se ha podido recuperar las citas o cita no encontrada</string>
    <string name="exception_message_medicine_not_found">No se ha podido recuperar los medicamentos o medicamento no encontrado</string>
    <string name="exception_message_routine_not_found">No se ha podido recuperar las rutinas o rutina no encontrada</string>
    <string name="exception_message_exam_not_found">No se ha podido recuperar las pruebas o prueba no encontrada</string>
    <string name="exception_message_symptom_not_found">No se ha podido recuperar los síntomas o síntoma no encontrado</string>
    <string name="title_activity_personaje">Personaje</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recursos">RecursosActivity</string>
    <string name="relajate">Relájate.....Respirando</string>
    <string name="meditacion">Muchas personas que están a la espera de una revisión médica han descubierto que el practicar relajación con ejercicios muy sencillos les ayuda a reducir el estrés. Te ofrecemos una serie de pautas de respiración que puedes practicar en casa y que pueden ayudarte en tu dia a día:\n\n
     l. Busca un sitio tranquilo donde puedas relajarte durante al menos 20 minutos.\n\n
     2. Asegúrate de que el ambiente sea relajante. Si lo deseas, puedes bajar la intensidad de la luz y elegir una silla o un sofá cómodo en el que puedas relajar los músculos.\n\n
     3. A continuación, coloca una mano sobre el vientre y la otra en el estómago para poder percibir claramente la respiración, coge aire por la nariz, llévalo hasta el fondo de los pulmones [para ello, infla voluntariamente el abdomen-la tripa], retén unos segundos la respiración y después expulsa el aire lentamente por la boca con los labios ligeramente fruncidos [como si estuvieras soplando una vela].\n\n
     4. En el transcurso del ejercicio, puedes ir variando la velocidad de la respiración, hasta conseguir un ritmo lento pero constante.\n\n
     5. Práctica este ejercicio durante unos cinco minutos cada día.\n\n</string>
    <string name="alimentacion">
        <li> 1. Cuida el ambiente durante la comida.</li>\n\n
        <li> 2. Realiza 5-6 comidas ligeras diarias.</li>\n\n
        <li> 3. Bebe alrededor de 6-8 vasos diarios de agua u otros líquidos (infusiones, zumos o batidos), a pequeños sorbos y fuera de las comidas.</li>\n\n
        <li> 4. Extrema la higiene de la boca.</li>\n\n
        <li> 6. Mantén un horario regular y diario para ir al baño.</li>\n\n
        <li> 7. Elige alimentos de sabor y olor suave, textura homogénea y cremosa, consistencia blanda, cocinado sencillo (cocido, hervido, plancha) y de fácil digestión en momentos de poco apetito o digestiones pesadas.</li>\n\n
        <li> 8. Evita los lugares donde se cocina, la comida de olor fuerte, los irritantes, el tabaco y el alcohol que secan la boca y alteran el gusto de los alimentos.</li>\n\n
        <li> 9. Pésate todas las semanas al levantarte por la mañana. Si adelgazas, valora cuál es la causa y coméntalo con tu médico.</li>\n\n
        <li> 10. Si tu médico te prescribe un suplemento nutricional recuerda que habitualmente es un complemento o apoyo a tu comida y no un sustituto.</li>\n\n
        </string>
    <string name="revisiones">
        Las revisiones médicas se viven con frecuencia como un recordatorio de todo lo pasado. -Volvemos al hospital, volvemos a ver a nuestros médicos- y es inevitable que reaparezca el malestar, las dudas, los miedos, etc.\nPara afrontar este momento, puedes poner en marcha algunas estrategias que te ayuden a disminuir el malestar que las revisiones pueden generar.\n\n
        <b>Dos semanas antes de la cita con el médico</b>\n
        <li>Descansa e intenta mantener tus hábitos de sueño.</li>\n
        <li>Cuida tu alimentación y realiza comidas regulares y equilibradas.</li>\n
        <li>Haz ejercicio moderado para disminuir la tensión y mejorar el ánimo y el sueño.</li>\n
        <li>Evita el consumo de alcohol y de bebidas excitantes, como café, té y refrescos de cola.</li>\n
        <li>No tomes ningún fármaco que no tengas pautado sin consultarlo previamente con tu médico.</li>\n
        <li>Práctica a diario los ejercicios de respiración.</li>\n\n
        <b>Dos semanas antes de la cita con el médico</b>\n
        <li>Pide algún familiar o amigo que te acompañe. Te ayudará a pasar este momento y además ellos sentirán que pueden hacer algo por ti.</li>\n
        <li>Comienza a anotar en el diario todo aquello que quieras comentar con tu médico: cualquier síntoma que hayas notado y te preocupe (pérdida de apetito o peso, vómitos, diarreas, aparición de dolor, cansancio, la medicación que estás tomando, etc.</li>\n
        <li>Cuenta a los demás como te sientes. Comparte con ellos tus emociones y las cosas que te preocupan.</li>\n
        <li>Finaliza el día con pensamientos positivos como: -"hasta ahora todo ha ido bien, por ahora no tengo ninguna prueba de que haya cambiado", -estoy en buenas manos-.</li>\n\n
        <b>El día de la cita médica y las pruebas</b>\n
        <li>Comienza el día con pensamientos positivos. Repítelos ante el espejo: -es normal estar nervioso en esta situación-, -la ansiedad es molesta pero puedo tolerarla-.</li>\n
        <li>Piensa qué puedes hacer para distraerle y que los tiempos de espera en la consulta sean más fáciles [escoge alguna lectura para llevarte, etc.</li>\n
        <li>Si notas que te sientes muy nervioso, puedes poner en práctica los ejercicios de respiración.</li>\n
        <li>Durante la consulta o realización de las pruebas no interpretes, mejor pregunta. Una mirada, un gesto por parte del médico o profesional que está realizado la prueba puede ser interpretada como un signo de que algo va mal cuando no necesariamente tiene por qué ser así.</li>\n\n
        <b>Ya en la consulta ¿Cómo hablo con el médico?</b>\n
        Recuerda que la consulta con tu médico tiene una duración limitada por lo que preparar previamente qué le quieres preguntar al médico te ayudará a aprovechar al máximo la consulta con él.\n\n
        <li>Procura hacer preguntas cortas y directas. Una cada vez, y espera a que el médico te responda. Escucha las respuestas.</li>\n
        <li>Realiza preguntas generales cuando quieras ampliar información. Si necesitas comprender algo más sobre el proceso de la enfermedad, puedes hacer preguntas como: ¿Qué objetivo tiene este tratamiento? ¿Para qué he de realizarme esta prueba?</li>\n
        <li>Si buscas información para tomar una decisión, puedes hacer preguntas del tipo ¿Cuáles son las ventajas e inconvenientes?, ¿Qué sugiere que se haga en este caso?</li>\n\n
    </string>
    <string name="vida">
        <li><b>No pierdas tu vida en un trabajo que odias.</b> La vida es demasiado corta como para vivirla sólo por la noche y los fines de semana.</li>\n\n
        <li>Si en tu vida pasa algo malo que no puedes evitar, <b>trata de adaptarte</b>. Darte cabezazos contra la pared no tiene sentido.</li>\n\n
        <li><b>Si piensas que puedes cambiar algo, trata de hacerlo por todos los medios.</b> Intenta antes entender la esencia del problema y entonces te vas a dar cuenta de que se puede resolver.</li>\n\n
        <li><b>No existen "buenas" y "malas" decisiones. </b>Si hiciste algo que crees que está mal, aprende una lección de ello, la próxima vez lo harás mejor. No puedes saber las vueltas que finalmente van a dar las cosas, por lo que sentarse a llorar es una pérdida del tiempo.</li>\n\n
        <li><b>Pide perdón a las personas a quien podrías haber hecho daño.</b> No eres perfecto, ni siquiera intentes aparentarlo, sólo admite la responsabilidad del sufrimiento que causó a otra persona.</li>\n\n
        <li><b>No te arrepientas del pasado, ya no vas a poder cambiarlo.</b> Vive del presente. Pero no el de un solo momento, es demasiado corto. "Ahora" es un pedazo de tiempo corto que incluye un poco del pasado, un poco del futuro y el presente mismo.</li>\n\n
        <li><b>Estate abierto a diferentes ideas.</b> No descartes otras posibilidades.</li>\n\n
        <li><b>Trata de no perder nunca el sentido del humor, </b>aunque no siempre sea posible.</li>\n\n
        <li><b>Carpe Diem.</b> En otras palabras, ¡aprovecha el momento!</li>\n\n
        <li><b>No tengas miedo a la muerte. </b>Si no le tienes miedo a la muerte, no le vas a tener miedo a nada que te depare la vida.</li>\n\n
    </string>
    <string name="AECC">Como indica su nombre, su objetivo es luchar contra todos los tipos de cáncer: informando, apoyando y acompañando a los enfermos y sus familiares, promoviendo la investigación oncológica, y concienciando a la sociedad de la necesidad de actuar frente a esta enfermedad. Aunque tiene su sede central en Madrid, desarrolla su labor en toda España, y tiene representación en más de 2.000 localidades por todo el país.</string>
    <string name="GEPC">Su objetivo es velar por los intereses de los pacientes de cáncer, para que todos tengan acceso a un diagnóstico rápido y a los mejores tratamientos posibles, facilitando también su participación en ensayos clínicos y estudios epidemiológicos.</string>
    <string name="d_ini_med">Día inicio</string>
    <string name="d_fin_med">Día fin</string>
    <string name="h_ini_med">Hora inicio</string>
    <string name="h_fin_med">Hora fin</string>
</resources>