<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/blancoVerdoso"
    tools:context="org.aecc.superdiary.BienvenidaActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imagenEntrada"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/aecclogo"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enmarcha"
        android:id="@+id/botonEnMarcha"
        style="@android:style/ButtonBar"
        android:background="@color/verdeAecc"
        android:layout_above="@+id/botonCalendario"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendario"
        android:id="@+id/botonCalendario"
        style="@android:style/ButtonBar"
        android:background="@color/verdeAecc"
        android:layout_above="@+id/botonMisCitas"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/miscitas"
        android:id="@+id/botonMisCitas"
        style="@android:style/ButtonBar"
        android:background="@color/verdeAecc"
        android:layout_above="@+id/botonMisPersonas"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mispersonas"
        android:id="@+id/botonMisPersonas"
        style="@android:style/ButtonBar"
        android:background="@color/verdeAecc"
        android:layout_above="@+id/botonOtros"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/otros"
        android:id="@+id/botonOtros"
        style="@android:style/ButtonBar"
        android:background="@color/verdeAecc"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
