<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/medic_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fotoMedic"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/blancoVerdoso"
            android:src="@drawable/medicamento_v" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <!-- NOMBRE Y APELLIDOS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        style="@style/iconosCamposDescrp"
                        android:src="@drawable/aecc_medicamento"/>
                    <TextView
                        style="@style/textoDatosEntidades"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MEDICAMENTO" />
                </LinearLayout>

                <TextView
                    android:id="@+id/nombreMedic"
                    style="@style/textoInsercionCampos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#728C93" />

            <!-- FECHA Y HORA INICIO-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:gravity="left"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/iconosCamposDescrp"
                            android:src="@drawable/aecc_fecha"/>

                        <TextView
                            style="@style/textoDatosEntidades"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                           android:text="DIA INICIO" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/fechaInicMedic"
                        style="@style/textoInsercionCampos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/d_ini_med"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:gravity="left"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/iconosCamposDescrp"
                            android:src="@drawable/aecc_hora"/>
                    <TextView
                        style="@style/textoDatosEntidades"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HORA INICIO" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/horaIniMedic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="4"
                        android:hint="@string/h_ini_med" />
                </LinearLayout>
            </LinearLayout>

            <!-- FECHA Y HORA FIN-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/iconosCamposDescrp"
                            android:src="@drawable/aecc_fecha_alarma"/>

                        <TextView
                            style="@style/textoDatosEntidades"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="DIA FIN" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/fechaFinMedic"
                        style="@style/textoInsercionCampos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/d_fin_med"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/iconosCamposDescrp"
                            android:src="@drawable/aecc_hora_alarma"/>
                        <TextView
                            style="@style/textoDatosEntidades"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="HORA FIN" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/horaFinMedic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="4"
                        android:hint="@string/h_fin_med"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#728C93" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        style="@style/iconosCamposDescrp"
                        android:src="@drawable/aecc_duracion"/>

                    <TextView
                        style="@style/textoDatosEntidades"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TOMAR CADA" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBarMedic"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:max="24"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:progress="1" />

                <TextView
                    style="@style/textoDatosEntidades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HRS" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#728C93" />

            <!-- DESCRIPCIÓN -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            style="@style/iconosCamposDescrp"
                            android:src="@drawable/aecc_posologia"/>

                        <TextView
                            style="@style/textoDatosEntidades"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="¿PARA QUÉ ES?" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/descripcionPrueba"
                        style="@style/textoInsercionCampos"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:inputType="textPersonName|textMultiLine"
                        android:lines="10"
                        android:minLines="4"
                        android:scrollHorizontally="false"
                        android:scrollbars="vertical"
                        android:singleLine="false" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/editarMedicamento"
                style="?android:attr/buttonStyleSmall"
                android:background="@color/naranjaBoton"
                android:textColor="@color/blancoVerdoso"
                android:textAllCaps="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="EDITAR"
                />

            <Button
                android:id="@+id/borrarMedicamento"
                style="?android:attr/buttonStyleSmall"
                android:background="@color/rojoBorrado"
                android:textColor="@color/blancoVerdoso"
                android:textAllCaps="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="BORRAR"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>